--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 
   <link rel="stylesheet" href="index.css"/>
 </head>
-<body>
-  <div class=header>
+<body>style="background: rgb(255,200,200);"  <div class=header>
     <h1>ATTiC ROOM</h1>
     <div>せつめいせつめい</div>
   </div>
